<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IEBicycle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Account Login</string>
    <string name="username_label">Account</string>
    <string name="password_label">Password</string>
    <string name="auto_login_label">Auto login</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="motor_miles">mileage</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test1">Test1Activity</string>

</resources>
